# pgcpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/access/: rel.cpp
src/catalog/: bootstrap_catalog.cpp  catalog.cpp  lsyscache.cpp  namespace.cpp  syscache.cpp
src/commands/: aggregatecmds.cpp  analyze.cpp  castcmds.cpp  copy.cpp  copy_from.cpp  copy_to.cpp  dbcommands.cpp  domaincmds.cpp  explain.cpp  extensioncmds.cpp  foreigncmds.cpp  functioncmds.cpp  indexcmds.cpp  languagecmds.cpp  opclasscmds.cpp  operatorcmds.cpp  policycmds.cpp  publicationcmds.cpp  rulecmds.cpp  schemacmds.cpp  seclabelcmds.cpp  sequence.cpp  subscriptioncmds.cpp  systemcmds.cpp  tablecmds.cpp  tablespace.cpp  trigger.cpp  typecmds.cpp  vacuum.cpp  view.cpp
src/executor/: estate.cpp  exec_expr.cpp  exec_main.cpp  exec_utils.cpp  node_agg.cpp  node_append.cpp  node_bitmap_heapscan.cpp  node_bitmap_indexscan.cpp  node_ctescan.cpp  node_exec.cpp  node_foreignscan.cpp  node_functionscan.cpp  node_gather.cpp  node_group.cpp  node_hash.cpp  node_hashjoin.cpp  node_incrementalsort.cpp  node_indexscan.cpp  node_limit.cpp  node_lockrows.cpp  node_material.cpp  node_memoize.cpp  node_mergeappend.cpp  node_mergejoin.cpp  node_modify_table.cpp  node_nestloop.cpp  node_projectset.cpp  node_recursiveunion.cpp  node_seqscan.cpp  node_setop.cpp  node_sort.cpp  node_subqueryscan.cpp  node_tidscan.cpp  node_unique.cpp  node_valuesscan.cpp  node_windowagg.cpp  node_worktablescan.cpp  parallel.cpp  tupletable.cpp
src/extension/: extension.cpp
src/foreign/: file_fdw.cpp  foreign.cpp
src/jit/: jit.cpp  llvm_jit.cpp
src/lib/: binaryheap.cpp  bloom.cpp  dshash.cpp  hyperloglog.cpp  ilist.cpp  integerset.cpp  pairingheap.cpp  rbtree.cpp
src/libpq/: cancel.cpp  conninfo.cpp  escape.cpp  large_object.cpp  libpq.cpp
src/parser/: analyze.cpp  gram.yy  keywords.cpp  parse_agg.cpp  parse_clause.cpp  parse_coerce.cpp  parse_cte.cpp  parse_expr.cpp  parse_func.cpp  parse_node.cpp  parse_oper.cpp  parse_relation.cpp  parse_target.cpp  parse_type.cpp  parse_utilcmd.cpp  parsenodes.cpp  parser.cpp  primnodes.cpp  scan.ll  scanner.cpp
src/partitioning/: partbounds.cpp  partdesc.cpp  partprune.cpp
src/pl/: pl_handler.cpp
src/protocol/: auth.cpp  crypt.cpp  dest.cpp  fastpath.cpp  fsstubs.cpp  gssapi.cpp  hba.cpp  ifaddr.cpp  postgres.cpp  pqformat.cpp  pqmq.cpp  pqsignal.cpp  secure.cpp  utility.cpp
src/regex/: regcomp.cpp  regerror.cpp  regexec.cpp  regexport.cpp  regfree.cpp  regprefix.cpp
src/replication/: backup.cpp  launcher.cpp  logical.cpp  logicalproto.cpp  origin.cpp  replutil.cpp  slot.cpp  slotfuncs.cpp  syncrep.cpp  walreceiver.cpp  walsender.cpp  walsenderfuncs.cpp  worker.cpp
src/rewrite/: rewrite_define.cpp  rewrite_handler.cpp  rowsecurity.cpp
src/server/: autovacuum.cpp  auxprocess.cpp  bgworker.cpp  bgwriter.cpp  bootstrap.cpp  checkpointer.cpp  fork_process.cpp  guc.cpp  interrupt.cpp  main.cpp  options.cpp  pgarch.cpp  postmaster.cpp  shell_archive.cpp  startup.cpp  syslogger.cpp  walwriter.cpp
src/statistics/: extended_stats.cpp  mvdependencies.cpp  mvdistinct.cpp  mvdistinct_sample.cpp
src/stats/: stats_bootstrap.cpp  stats_collector.cpp  stats_scan.cpp  stats_view.cpp
src/tools/: pg_amcheck.cpp  pg_basebackup.cpp  pg_checksums.cpp  pg_config.cpp  pg_ctl.cpp  pg_dump.cpp  pg_isready.cpp  pg_recvlogical.cpp  pg_restore.cpp  pg_rewind.cpp  pg_upgrade.cpp  pg_waldump.cpp  pgbench.cpp  psql_client.cpp  psql_command.cpp  psql_completion.cpp  psql_crosstabview.cpp  psql_describe.cpp  psql_help.cpp  psql_large_obj.cpp  psql_print.cpp  psql_prompt.cpp  psql_variables.cpp  sql_admin.cpp
src/transaction/: commit_ts.cpp  crc32c.cpp  deadlock.cpp  lmgr.cpp  lock.cpp  multixact.cpp  parallel.cpp  procarray.cpp  sinval.cpp  slru.cpp  snapshot.cpp  ssi.cpp  transam.cpp  twophase.cpp  visibility.cpp  xact.cpp  xlog.cpp  xloginsert.cpp  xlogreader.cpp  xlogrecovery.cpp
src/tsearch/: dict.cpp  ispell.cpp  snowball.cpp  thesaurus.cpp  to_tsquery.cpp  to_tsvector.cpp  ts_config.cpp  ts_typanalyze.cpp  ts_utils.cpp  tsquery_parser.cpp  tsvector_parser.cpp  wparser.cpp
src/types/: acl.cpp  array.cpp  builtins.cpp  datetime.cpp  enum_types.cpp  geo.cpp  json.cpp  math_funcs.cpp  misc_types.cpp  network_types.cpp  numeric.cpp  numutils.cpp  oid_types.cpp  orderedsetaggs.cpp  range.cpp  rowtypes.cpp  ruleutils.cpp  selfuncs.cpp  string_funcs.cpp  ts_types.cpp  uuid.cpp  varbit.cpp  windowfunctions.cpp  xml.cpp
test/: CMakeLists.txt
test/regression/: CMakeLists.txt  agg_basic.expected.out  agg_basic.sql  agg_group_by.expected.out  agg_group_by.sql  basic_insert.expected.out  basic_insert.sql  basic_select.expected.out  basic_select.sql  basic_update.expected.out  basic_update.sql  dml_insert.expected.out  dml_insert.sql  dml_select.expected.out  dml_select.sql  expr_case.expected.out  expr_case.sql  expr_cast.expected.out  expr_cast.sql  func_math.expected.out  func_math.sql  func_null.expected.out  func_null.sql  func_string.expected.out  func_string.sql  ops_arithmetic.expected.out  ops_arithmetic.sql  ops_comparison.expected.out  ops_comparison.sql  ops_string.expected.out  ops_string.sql  pathological_data.expected.out  pathological_data.sql  query_cte_window.expected.out  query_cte_window.sql  query_join.expected.out  query_join.sql  query_set_ops.expected.out  query_set_ops.sql  query_subquery.expected.out  (+12 more)
tools/: CMakeLists.txt
tools/clusterdb/: clusterdb.cpp
tools/createdb/: createdb.cpp
tools/createuser/: createuser.cpp
tools/dropdb/: dropdb.cpp
tools/dropuser/: dropuser.cpp
tools/initdb/: initdb.cpp
tools/pg_amcheck/: pg_amcheck.cpp
tools/pg_basebackup/: pg_basebackup.cpp
tools/pg_checksums/: pg_checksums.cpp
tools/pg_config/: pg_config.cpp
tools/pg_ctl/: pg_ctl.cpp
tools/pg_dump/: pg_dump.cpp
tools/pg_isready/: pg_isready.cpp
tools/pg_recvlogical/: pg_recvlogical.cpp
tools/pg_restore/: pg_restore.cpp
tools/pg_rewind/: pg_rewind.cpp
tools/pg_upgrade/: pg_upgrade.cpp
tools/pg_waldump/: pg_waldump.cpp
(+1013 files in other folders)
